--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "webpack": "webpack -d --watch",
-    "seed-database": "node ./db/seed.js",
+    "seed": "node ./db/seed.js",
     "test": "jest",
     "lint": "./node_modules/.bin/eslint"
   },
@@ -30,7 +30,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "faker": "^5.1.0",
     "jest": "^26.6.3",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
@@ -40,13 +39,17 @@
   },
   "dependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
+    "arangojs": "^7.2.0",
     "axios": "^0.21.0",
     "babel-jest": "^26.6.3",
+    "csv-write-stream": "^2.0.0",
     "express": "^4.15.0",
+    "faker": "^5.1.0",
     "mongodb": "3.6.2",
     "mongoose": "^5.10.12",
     "nodemon": "^2.0.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "yargs": "^16.1.1"
   }
 }
