Finish first round at get/post routes, pre-optimized

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,8 @@ node_modules
 *.pem
 *.csv
 arangoData.json
+arangoImageData.json
+arangoListingData.json
+arangoListingDataNoObj.json
+arangoUserData.json
 arangoDataTest.json
