--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "scripts": {
     "start": "nodemon server/index.js",
     "webpack": "webpack -d --watch",
-    "seedListings": "node ./seedListings.js",
-    "seedImages": "node ./seedImages.js",
-    "seedUsers": "node ./seedUsers.js",
-    "seedArango": "node ./arangoGenerator.js",
-    "createUsers": "node ./arangoUserGen.js",
+    "seedArango": "node ./seeding/arangoGenerator.js",
+    "createUsers": "node ./seeding/arangoUserGen.js",
+    "createListings": "node ./seeding/arangoListingGen.js",
+    "createImages": "node ./seeding/arangoImageGen.js",
+    "stress": "k6 run script.js",
     "test": "jest",
     "lint": "./node_modules/.bin/eslint"
   },
@@ -37,13 +37,14 @@
     "jest": "^26.6.3",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
+    "k6": "0.0.0",
     "style-loader": "^2.0.0",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "@shelf/jest-mongodb": "^1.2.3",
-    "arangojs": "^7.2.0",
+    "arangojs": "^5.8.0",
     "axios": "^0.21.0",
     "babel-jest": "^26.6.3",
     "csv-write-stream": "^2.0.0",
@@ -51,6 +52,8 @@
     "faker": "^5.1.0",
     "mongodb": "3.6.2",
     "mongoose": "^5.10.12",
+    "morgan": "^1.10.0",
+    "newrelic": "^7.0.2",
     "nodemon": "^2.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
