retry seeding script

--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
     "webpack": "webpack -d --watch",
     "seedArango": "node ./seeding/arangoGenerator.js",
     "createUsers": "node ./seeding/arangoUserGen.js",
-    "createListings": "node ./seeding/arangoListingGen.js",
-    "createImages": "node ./seeding/arangoImageGen.js",
+    "seed0": "node ./seeding/arangoGenerator --start 0 --lines 1000000 --output ./seeding/data0.json",
+    "seed1": "node ./seeding/arangoGenerator --start 1000000 --lines 1000000 --output ./seeding/data1.json",
+    "seed2": "node ./seeding/arangoGenerator --start 2000000 --lines 1000000 --output ./seeding/data2.json",
+    "seed3": "node ./seeding/arangoGenerator --start 3000000 --lines 1000000 --output ./seeding/data3.json",
+    "seed4": "node ./seeding/arangoGenerator --start 4000000 --lines 1000000 --output ./seeding/data4.json",
+    "seed5": "node ./seeding/arangoGenerator --start 5000000 --lines 1000000 --output ./seeding/data5.json",
+    "seed6": "node ./seeding/arangoGenerator --start 6000000 --lines 1000000 --output ./seeding/data6.json",
+    "seed7": "node ./seeding/arangoGenerator --start 7000000 --lines 1000000 --output ./seeding/data7.json",
+    "seed8": "node ./seeding/arangoGenerator --start 8000000 --lines 1000000 --output ./seeding/data8.json",
+    "seed9": "node ./seeding/arangoGenerator --start 9000000 --lines 1000000 --output ./seeding/data9.json",
     "stress": "k6 run script.js",
     "test": "jest",
     "lint": "./node_modules/.bin/eslint"
